* The update() now actively runs under the model environment
* The plotHR is updated and can now plot contrasts if provided a rms-package regression
  allowing for efficient comparison of multiple models. Internal functions have also
  been externalized.
* All current unit tests now pass and several new ones have been added
* Implemented DRY roxygen2 code
* The getCrudeAndAdjusted now retains cluster and stratas - there are options for
  leaving these out to retain old behavior
* The getCrudeAndAdjusted now allows for selecting variables. The printCrudeAndAdjusted
  now passes on the order option when variable selection is of interest.
* Cleaned variables for the forestplot2 functions

Changes for 0.7.1
-----------------
* Internalized some of the private function documentation
* Improved the outcome extractor function and added test cases

Changes for 0.7.0
-----------------
* Major remake of the print-/getCrudeAndAdjusted so that they depend on prMapVariable2Name
  and everything is now centered around the variables 
* The printCrudeAndAdjustedModel no longer capitalizes the first letter in order 
  to allow all lower case var names
* Added imputation compatibility with the Hmisc::fit.mult.impute function
* Added multiple test cases for stability

Changes for 0.6.1
-----------------
* Changed versioning
* Fixed bug for printCrudeAndAdjusted when using matrix from the getC&A
* Fixed bug when boolean desc_column was generated
* Added stop() when using descriptive column without add_refrerences

Changes for 0.6.0.1
-------------------
* The getCrudeAndAdjusted now handles the intercept term better for naming the 
  rows (Thanks to Victor)
* The getCrudeAndAdjusted/printCrudeAndAdjusted now use 'model' instead 'fit' for 
  the model regression object name
* The printCrudeAndAdjusted now calls print on the htmlTable_str object so that it 
  appears as expected
* Added unit tests

Changes for 0.6.0.0
-------------------
* The split from the Gmisc package