@@ -10,6 +10,7 @@ S3method(latex,printCrudeAndAdjusted)
 S3method(model.matrix,ols)
 S3method(print,printCrudeAndAdjusted)
 S3method(print,simpleRmsAnova)
+export(addNonlinearity2Model)
 export(caDescribeOpts)
 export(confint_robust)
 export(forestplotCombineRegrObj)
@@ -21,6 +22,7 @@ export(plotHR)
 export(printCrudeAndAdjustedModel)
 export(robcov_alt)
 export(simpleRmsAnova)
+import(parallel)
 importFrom(Gmisc,copyAllNewAttributes)
 importFrom(Gmisc,forestplot2)
 importFrom(Gmisc,getDescriptionStatsBy)
